--- a/map.css
+++ b/map.css
@@ -1,3 +1,48 @@
+html {
+    margin:0;
+    padding:0;
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+#viewscreen {
+    width:100%;
+    margin:0;
+    padding:0;
+}
+
+#map, #infopane {
+    float;left;
+    margin:0;
+    padding:0;
+    position:absolute !important;
+    height:700px;
+}
+
+#infopane {
+    list-style-type: none;
+}
+
 #map {
-    height:500px;
+    width:66%;
+}
+
+p.namelist {
+    margin:0;
+    padding:0;
+}
+
+
+#infopane {
+    width:30%;
+    margin-left:68%;
+    overflow:scroll;
+
+}
+
+#infopane-text {
+    padding:0;
+    margin:0;
 }
